--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@ The night before Christmas,<br /><br />
 and all through the house...<br /><br />
 
 <img src="img/0.png" /><br /><br />
-A bunch of dino camped by the fire, whimpering like a mouse...<br /><br />
+A bunch of dino camped by the fire, whimpering like a mouse...<br /><br /><br /><br />
 <img src="img/1.png" /><br /><br />
 Yellow: "My tubby is growling, and I'm down for a feast..."<br /><br />
-Pink: "But where will we seek to find something to eat?"<br /><br />
+Pink: "But where will we seek to find something to eat?"<br /><br /><br /><br />
 <img src="img/2.png" /><br /><br />
-Teal: *As I look around, but what do I see...*<br /><br />
+Teal: *As I look around, but what do I see...*<br /><br /><br /><br />
 <img src="img/3.png" /><br /><br />
-A bear head peak out, from beyond the trees....<br /><br />
+A bear head peak out, from beyond the trees....<br /><br /><br /><br />
 
 <img src="img/4.png" /><br /><br />
-The bear stopped in place, surrounded by gaze<br /><br />
+The bear stopped in place, surrounded by gaze<br /><br /><br /><br />
 
 <img src="img/5.png" /><br /><br />
-Bear: "Why are you all staring at me, with eyes so crazed?"<br /><br />
+Bear: "Why are you all staring at me, with eyes so crazed?"<br /><br /><br /><br />
 
 <img src="img/6.png" /><br /><br />
 
 Before he knew it, the bear has been plated...<br /><br />
-and sprinkle with pepper, that he so hated.<br /><br />
+and sprinkle with pepper, that he so hated.<br /><br /><br /><br />
 
 <img src="img/7.png" /><br /><br />
 
@@ -39,13 +39,13 @@ Green: "Let season him up, and make sure its well spread."<br /><br />
 <img src="img/8.png" /><br /><br />
 
 The black dino jump up and wrapped the tail and ears<br /><br />
-Black: "Gotta wrap these tasties, else they will sear"<br /><br />
+Black: "Gotta wrap these tasties, else they will sear"<br /><br /><br /><br />
 <img src="img/9.png" /><br /><br />
 
-Pink dino found some onion and stuff one in the mouth<br /><br />
+Pink dino found some onion and stuff one in the mouth<br /><br /><br /><br />
 <img src="img/10.png" /><br /><br />
 
-Bear thinking: "OMG" The other one is going down south!!!<br /><br />
+Bear thinking: "OMG" The other one is going down south!!!<br /><br /><br /><br />
 <br /><br /><br /><br /><br /><br /><br /><br /><br />
 ...................<br />
 .................<br />
