--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ The night before Christmas,<br /><br />
 and all through the house...<br /><br />
 
 <img src="img/0.png" /><br /><br />
-A bunch of dino camped by the fire, whimpering like a mouse...<br /><br /><br /><br />
+A bunch of dino by the fire, whimpering like a mouse...<br /><br /><br /><br />
 <img src="img/1.png" /><br /><br />
 Yellow: "My tubby is growling, and I'm down for a feast..."<br /><br />
 Pink: "But where will we seek to find something to eat?"<br /><br /><br /><br />
