--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@ The night before Christmas,<br /><br />
 and all through the house...<br /><br />
 
 <img src="img/0.png" /><br /><br />
-A bunch of dino by the fire, whimpering like a mouse...<br /><br /><br /><br />
+A bunch of dinos rest by the fire, whimpering like a mouse...<br /><br /><br /><br />
 <img src="img/1.png" /><br /><br />
+
 Yellow: "My tubby is growling, and I'm down for a feast..."<br /><br />
 Pink: "But where will we seek to find something to eat?"<br /><br /><br /><br />
 <img src="img/2.png" /><br /><br />
@@ -42,7 +43,7 @@ The black dino jump up and wrapped the tail and ears<br /><br />
 Black: "Gotta wrap these tasties, else they will sear"<br /><br /><br /><br />
 <img src="img/9.png" /><br /><br />
 
-Pink dino found some onion and stuff one in the mouth<br /><br /><br /><br />
+Pink dino found some onions and stuff one in the mouth<br /><br /><br /><br />
 <img src="img/10.png" /><br /><br />
 
 Bear thinking: "OMG" The other one is going down south!!!<br /><br /><br /><br />
