--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Bear thinking: "OMG" The other one is going down south!!!<br /><br /><br /><br /
 .<br />
 
 <br /><br /><br /><br /><br /><br /><br /><br /><br />
-The moral of the story, is that there isnt any... Sunny is bored, and it gets freaky
+The moral of the story, is that there isnt any... Don't let Sunny get bored, else it gets freaky
 </body>
 
 </html>
