--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ A bunch of dinos huddle by the fire, whimpering like a mouse...<br /><br /><br /
 <img src="img/1.png" /><br /><br />
 
 Yellow: "My tubby is growling, and I'm down for a feast..."<br /><br />
-Pink: "But where will we seek to find something to eat?"<br /><br /><br /><br />
+Pink: "But where should we seek to find something to eat?"<br /><br /><br /><br />
 <img src="img/2.png" /><br /><br />
-Teal: *As I look around, but what do I see...*<br /><br /><br /><br />
+As Teal ponders, "What's that I see..."<br /><br /><br /><br />
 <img src="img/3.png" /><br /><br />
 A bear head peak out, from beyond the trees....<br /><br /><br /><br />
 
